--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" Type="text/css" href="styles.css" >
 	</head>
 	<body>
-	 <h1>Hello to our openSAP course</h1>
+	 <h1>Hello to our openSAP course - Welcome to Week 3</h1>
 	 <h2>Page of Quotes</h2>
 		<li>Line 1</li>
 		<li>Line 2</li>
