--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 	 <h1>A Page of Quotations</h1>
-	 <h2>Page of Quotes</h2>
+	 <h2>... for your reading pleasure</h2>
 		<li>Line 1</li>
 		<li>Line 2</li>
 		<ul>
