Added spock quote

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<li>A man is but the product of his thoughts.  Whe he thinks, he becomes.  -- Mahatma Gandi</li>
 			<li>It is better to be feared than loved, if you cannot have both -- Niccolo Machiavelli</li>
 			<li>Learning never exhausts the mind -- Leonardo da Vinci</li>
+			<li>Live long and prosper. --- S'Chn T'gai Spock</li>
 		</ul>
 	</body>
 </html>
