--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<li>It is better to be feared than loved, if you cannot have both -- Niccolo Machiavelli</li>
 			<li>Learning never exhausts the mind -- Leonardo da Vinci</li>
 			<li>Live long and prosper. --- S'Chn T'gai Spock</li>
+			<li>Love your enemies for they tell you your faults. --- Ben Franklin</li>
 		</ul>
 	</body>
 </html>
