--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<li>Live long and prosper. --- S'Chn T'gai Spock</li>
 			<li>Love your enemies for they tell you your faults. --- Ben Franklin</li>
 			<li>It ain't over till its over. --- Yogi Bera</li>
+			<li>From the course remote branch</li>
 		</ul>
 	</body>
 </html>
